fix(components): Fix PR comments

--- a/src/components/GenreSelect/GenreSelect.scss
+++ b/src/components/GenreSelect/GenreSelect.scss
@@ -1,8 +1,8 @@
-.ResultsFilter {
+.genre-select {
   display: flex;
   height: 60px;
 
-  &-item {
+  &__item {
     display: flex;
     align-items: center;
     margin: 0 15px;
