--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-.App {
+.app {
   text-align: center;
 
   &-logo {
@@ -19,12 +19,12 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .app-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
