--- a/src/components/GenreSelect/GenreSelect.scss
+++ b/src/components/GenreSelect/GenreSelect.scss
@@ -2,19 +2,17 @@
   display: flex;
   height: 60px;
 
-  &__item {
-    display: flex;
-    align-items: center;
+  button {
     margin: 0 15px;
-    border-bottom: 4px solid transparent;
+    padding: 0;
+    color: #fff;
+    text-transform: uppercase;
+    background-color: transparent;
+    border-width: 0 0 4px;
+    border-color: transparent;
+    cursor: pointer;
 
-    a {
-      color: #fff;
-      text-decoration: none;
-      text-transform: uppercase;
-    }
-
-    &.active {
+    &.selected {
       border-bottom: 4px solid #F65261;
     }
   }
