--- a/src/components/Counter/Counter.scss
+++ b/src/components/Counter/Counter.scss
@@ -1,9 +1,12 @@
 .counter {
   margin-bottom: 1rem;
+  font-size: 1.5rem;
 
   span {
     display: inline-block;
     min-width: 34px;
+    color: #ffffff;
+    text-align: center;
   }
 
   button {
@@ -11,14 +14,5 @@
     height: 50px;
     border-radius: 50%;
     margin: 0 1rem;
-    font-size: 1.5rem;
-    background-color: #f65261;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
-
-    &:active {
-      background-color: #bd323f;
-    }
   }
 }
