--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -22,18 +22,8 @@
   button {
     width: 233px;
     height: 57px;
-    background: #f65261;
     border-radius: 4px;
-    border: none;
-    box-shadow: none;
-    cursor: pointer;
-
+    font-size: 1.23rem;
     font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-
-    &:active {
-      background-color: #bd323f;
-    }
   }
 }
