--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,10 @@
   &-header {
     background-color: #232323;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    //display: flex;
+    //flex-direction: column;
+    //align-items: center;
+    //justify-content: center;
     color: white;
   }
 }
