--- a/src/components/GenreSelect/GenreSelect.scss
+++ b/src/components/GenreSelect/GenreSelect.scss
@@ -1,7 +1,7 @@
 .genre-select {
   display: flex;
   height: 60px;
-  margin-bottom: 1rem;
+  z-index: 1;
 
   button {
     margin: 0 15px;
@@ -11,6 +11,13 @@
     border-color: transparent;
     border-style: solid;
     font-size: 1rem;
+
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
 
     &.selected {
       border-bottom: 4px solid #F65261;
