--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -23,6 +23,7 @@
 
     div {
       width: 60px;
+      min-width: 60px;
       height: 60px;
       border: 1px solid #ffffff;
       border-radius: 50%;
